seo update, map saturation, page logo, bigger action btns, modal body overflow fix

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>GTA5 Vehicles</title>
+        <title>GTA Online Vehicles Gallery</title>
+        <meta name="description" content="Gallery list of vehicles available in gta online (grand theft auto 5 multiplayer). Browse vehicle stats, where to buy and how much. Save your favourite vehicles.">
     </head>
     <body>
         <div id="app"></div>
